# cathode-chain

./: .gitignore  AUDIT_CERTIK_2026_03_23.md  AUDIT_CERTIK_CRYPTO_2026_03_23.md  AUDIT_CERTIK_CRYPTO_v147.md  AUDIT_CERTIK_FINAL_v153.md  AUDIT_CERTIK_REAUDIT_v152_2026_03_24.md  AUDIT_CONSENSYS_DILIGENCE.md  AUDIT_CONSENSYS_DILIGENCE_v151.md  AUDIT_CONSENSYS_FINAL_v153_2026_03_24.md  AUDIT_CONSENSYS_HCS_STORAGE_SCAN_RUNTIME_NODE_CLI.md  AUDIT_CONSENSYS_REAUDIT_v147_HCS_STORAGE_SCAN_RUNTIME_NODE_CLI.md  AUDIT_CONSENSYS_REAUDIT_v152_2026_03_24.md  AUDIT_CYFRIN_v151_2026_03_23.md  AUDIT_HALBORN_v153_FINAL.md  AUDIT_HCS_STORAGE_SCAN_RUNTIME_NODE_CLI.md  AUDIT_OPENZEPPELIN_v151_2026_03_23.md  AUDIT_OZ_FINAL_v153_2026_03_24.md  AUDIT_PAYMENT_WALLET_BRIDGE_2026_03_23.md  AUDIT_REPORT_v1.1.1.md  AUDIT_SPEARBIT_EXECUTOR_MEMPOOL_STATE.md  AUDIT_SPEARBIT_FINAL_v153_2026_03_24.md  AUDIT_TOB_v151.md  AUDIT_v154_FINAL.md  CERTIK_AUDIT_v1.5.1.md  Cargo.toml  EXTERNAL_AUDIT_8_FIRMS_2026_03_23.md  EXTERNAL_AUDIT_BRIDGE_PAYMENT_WALLET.md  EXTERNAL_AUDIT_CRYPTO_CONSENSUS.md  EXTERNAL_AUDIT_NETWORK_GOVERNANCE.md  EXTERNAL_AUDIT_SUMMARY.md  EXTERNAL_AUDIT_v2_8_FIRMS_2026_03_23.md  EXTERNAL_AUDIT_v3_REAUDIT_2026_03_23.md  EXTERNAL_AUDIT_v4_8_FIRMS_2026_03_23.md  FINAL_AUDIT_v6_8_FIRMS_2026_03_24.md  HALBORN_REAUDIT_v152_2026_03_24.md  HALBORN_RED_TEAM_AUDIT_2026_03_23.md  HALBORN_RED_TEAM_REAUDIT_v2_2026_03_23.md  HALBORN_RED_TEAM_v3_AUDIT_2026_03_23.md  README.md  REAUDIT_CYFRIN_v152_2026_03_24.md  (+17 more)
cli/: Cargo.toml
cli/src/: main.rs
crates/bridge/: Cargo.toml
crates/bridge/src/: chains.rs  claim.rs  lib.rs  limits.rs  lock.rs  proof.rs  relayer.rs
crates/bridge/tests/: audit.rs  hack.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: hash.rs  lib.rs  merkle.rs  quantum.rs  signature.rs
crates/executor/: Cargo.toml
crates/executor/src/: gas.rs  lib.rs  pipeline.rs  state.rs
crates/executor/tests/: audit.rs  hack.rs  offensive.rs  stress.rs
crates/gossip/: Cargo.toml
crates/gossip/src/: lib.rs  network.rs  protocol.rs  sync.rs
crates/gossip/tests/: integration.rs  stress.rs
crates/governance/: Cargo.toml
crates/governance/src/: lib.rs  proposal.rs  validator.rs
crates/governance/tests/: audit.rs  hack.rs
crates/hashgraph/: Cargo.toml
crates/hashgraph/src/: consensus.rs  dag.rs  error.rs  event.rs  lib.rs  round.rs  state.rs  witness.rs
crates/hashgraph/tests/: adversarial_audit.rs  regression_and_pentest.rs  stress_and_attack.rs
crates/hcs/: Cargo.toml
crates/hcs/src/: lib.rs  message.rs  topic.rs
crates/hcs/tests/: stress.rs
crates/mempool/: Cargo.toml
crates/mempool/src/: lib.rs
crates/mempool/tests/: audit.rs  hack.rs
crates/network/: Cargo.toml
crates/network/src/: lib.rs
crates/payment/: Cargo.toml
crates/payment/src/: escrow.rs  fees.rs  invoice.rs  lib.rs  multisig.rs  streaming.rs
crates/payment/tests/: audit.rs  hack.rs
crates/rpc/: Cargo.toml
crates/rpc/src/: lib.rs  methods.rs  openapi.rs  rate_limit.rs  rest.rs  server.rs  types.rs  ws.rs
crates/rpc/tests/: audit.rs  hack.rs
crates/runtime/: Cargo.toml
crates/runtime/src/: lib.rs
crates/scan/: Cargo.toml
crates/scan/src/: async_scan.rs  block.rs  bridge_scan.rs  error.rs  export.rs  lib.rs  network.rs  payment_scan.rs  search.rs  token.rs  transaction.rs  util.rs
crates/storage/: Cargo.toml
crates/storage/src/: lib.rs
crates/storage/tests/: persistence.rs
crates/sync/: Cargo.toml
crates/sync/src/: checkpoint.rs  lib.rs
crates/sync/tests/: audit.rs
crates/types/: Cargo.toml
crates/types/src/: address.rs  lib.rs  receipt.rs  token.rs  transaction.rs
crates/types/tests/: audit.rs
crates/wallet/: Cargo.toml
crates/wallet/src/: contacts.rs  hd.rs  history.rs  keystore.rs  lib.rs  qr.rs
crates/wallet/tests/: audit.rs  hack.rs
node/: Cargo.toml
node/src/: main.rs
scripts/: build.sh  run-node.sh  setup.sh  test.sh
