[package]
name    = "cathode-executor"
version.workspace = true
edition.workspace = true

[dependencies]
cathode-crypto.workspace  = true
cathode-types             = { path = "../types" }
cathode-hashgraph         = { path = "../hashgraph" }
serde.workspace           = true
bincode.workspace         = true
anyhow.workspace          = true
thiserror.workspace       = true
tracing.workspace         = true
parking_lot.workspace     = true
dashmap.workspace         = true
rayon.workspace           = true

[dev-dependencies]
tokio = { workspace = true, features = ["full"] }
