[package]
name    = "cathode-gossip"
version.workspace = true
edition.workspace = true

[dependencies]
cathode-crypto.workspace    = true
cathode-hashgraph.workspace = true
cathode-types.workspace     = true
libp2p.workspace           = true
tokio.workspace            = true
serde.workspace            = true
serde_json.workspace       = true
bincode.workspace          = true
anyhow.workspace           = true
thiserror.workspace        = true
tracing.workspace          = true
futures                    = "0.3"
rand.workspace             = true
bytes.workspace            = true
parking_lot.workspace      = true

[dev-dependencies]
tracing-subscriber.workspace = true
