[package]
name    = "cathode-hashgraph"
version.workspace = true
edition.workspace = true

[dependencies]
cathode-crypto.workspace = true
serde.workspace         = true
bincode.workspace       = true
anyhow.workspace        = true
thiserror.workspace     = true
rayon.workspace         = true
tokio.workspace         = true
parking_lot.workspace   = true
dashmap.workspace       = true
tracing.workspace       = true
chrono.workspace        = true
rand.workspace          = true
hex.workspace           = true

[dev-dependencies]
cathode-gossip = { path = "../gossip" }
