[package]
name    = "cathode-hcs"
version.workspace = true
edition.workspace = true

[dependencies]
cathode-crypto.workspace    = true
cathode-hashgraph.workspace = true
serde.workspace            = true
bincode.workspace          = true
anyhow.workspace           = true
thiserror.workspace        = true
tracing.workspace          = true
parking_lot.workspace      = true
dashmap.workspace          = true
chrono.workspace           = true
