[package]
name    = "cathode-mempool"
version.workspace = true
edition.workspace = true

[dependencies]
cathode-crypto.workspace = true
cathode-types            = { path = "../types" }
cathode-executor         = { path = "../executor" }
parking_lot.workspace    = true
tracing.workspace        = true
thiserror.workspace      = true
