[package]
name    = "cathode-rpc"
version.workspace = true
edition.workspace = true

[dependencies]
cathode-crypto.workspace  = true
cathode-types             = { path = "../types" }
cathode-executor          = { path = "../executor" }
cathode-mempool           = { path = "../mempool" }
cathode-hashgraph         = { path = "../hashgraph" }
cathode-governance        = { path = "../governance" }
cathode-scan              = { path = "../scan" }
serde.workspace           = true
serde_json.workspace      = true
bincode.workspace         = true
anyhow.workspace          = true
thiserror.workspace       = true
tracing.workspace         = true
tokio.workspace           = true
parking_lot.workspace     = true
hex.workspace             = true

# HTTP server
axum = { version = "0.7", features = ["ws"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "timeout", "limit"] }
futures-util = "0.3"
dashmap.workspace = true

[dev-dependencies]
tracing-subscriber.workspace = true
reqwest = { version = "0.12", features = ["json"] }
