[package]
name    = "cathode-storage"
version.workspace = true
edition.workspace = true

[dependencies]
cathode-crypto.workspace    = true
cathode-hashgraph.workspace = true
cathode-hcs.workspace       = true
rocksdb.workspace          = true
serde.workspace            = true
bincode.workspace          = true
anyhow.workspace           = true
tracing.workspace          = true
