[package]
name    = "cathode-sync"
version.workspace = true
edition.workspace = true

[dependencies]
cathode-crypto.workspace  = true
cathode-types             = { path = "../types" }
cathode-executor          = { path = "../executor" }
cathode-hashgraph         = { path = "../hashgraph" }
cathode-storage           = { path = "../storage" }
serde.workspace           = true
bincode.workspace         = true
anyhow.workspace          = true
thiserror.workspace       = true
tracing.workspace         = true
parking_lot.workspace     = true
