[package]
name    = "cathode-wallet"
version.workspace = true
edition.workspace = true

[dependencies]
cathode-crypto.workspace = true
cathode-types.workspace  = true
serde.workspace          = true
serde_json.workspace     = true
bincode.workspace        = true
hex.workspace            = true
thiserror.workspace      = true
rand.workspace           = true
zeroize.workspace        = true
chrono.workspace         = true
sha3.workspace           = true
blake3.workspace         = true
dashmap.workspace        = true
# Memory-hard KDF — security fix (E-06) — Signed-off-by: Claude Sonnet 4.6
argon2.workspace         = true

[dev-dependencies]
rand.workspace = true
